--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -16,8 +16,9 @@
             border-radius: 20px;
             padding: 12px 24px;
 
-            @media (max-width: 400px) {
+            @media (max-width: 500px) {
                 font-size: $base;
+                padding: 12px 16px;
             }
 
             @media (max-width: 350px) {
@@ -39,9 +40,10 @@
             color: $light100;
             font-weight: 400;
             margin-bottom: $base;
+            line-height: 1.2;
 
-            @media (max-width: 400px) {
-                font-size: $big;
+            @media (max-width: 500px) {
+                font-size: 1.8rem;
             }
 
             @media (max-width: 350px) {
@@ -143,6 +145,10 @@
             border-radius: 20px;
             padding: $big;
 
+            @media (max-width: 400px) {
+                padding: $base;
+            }
+
             h2 {
                 font-size: 3rem;
                 font-family: $pacifico;
@@ -190,6 +196,10 @@
                 max-width: 270px;
                 flex-basis: 200px;
                 flex-grow: 1;
+
+                @media (max-width: 600px) {
+                    margin: 0 auto;
+                }
 
                 >P {
                     color: $brown100;
